--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
-  "name": "application-name",
-  "version": "2.0.0",
+  "name": "ease-realtime-azure",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "start": "node server"
-  },  
-"license": "Apache",
-"engines": {
+  },
+  "license": "Apache",
+  "engines": {
     "node": "~0.10.0 || ~4.2.0"
+  },
+  "dependencies": {
+    "express": "*",
+    "mysql": "^2.11.1",
+    "socket.io": "*"
   }
 }
